Add initial hydrogen-like orbital visualisation

--- a/src/components/QMVisualization.module.css
+++ b/src/components/QMVisualization.module.css
@@ -435,3 +435,10 @@
     grid-template-columns: 1fr;
   }
 }
+
+.main {
+  display: flex;
+  align-items: center;
+  padding: 2rem 0;
+  width: 100%;
+}
