Working charge settings etc. update trajectory viewer to handle exyz

--- a/src/components/SelfiesGenerator/InfiniteMolecules.module.css
+++ b/src/components/SelfiesGenerator/InfiniteMolecules.module.css
@@ -61,7 +61,7 @@
 }
 
 .moleculeViewer {
-  background: white;
+  background: var(--ifm-background-surface-color);
   height: 200px;
   display: flex;
   align-items: center;
