--- a/src/components/WavefunctionCalculator/MatrixDisplay.module.css
+++ b/src/components/WavefunctionCalculator/MatrixDisplay.module.css
@@ -123,8 +123,8 @@
 }
 
 .matrixElement {
-  background-color: white;
-  color: black;
+  background-color: var(--ifm-background-surface-color);
+  color: var(--ifm-font-color-base);
   padding: 0.25rem 0.375rem;
   font-size: 0.75rem;
   text-align: right;
@@ -136,7 +136,7 @@
 }
 
 .zeroElement {
-  background-color: #f8f8f8;
+  background-color: var(--ifm-color-emphasis-100);
   color: var(--ifm-color-emphasis-500);
   text-align: center;
 }
