--- a/src/components/WavefunctionCalculator/ResultsDisplay.module.css
+++ b/src/components/WavefunctionCalculator/ResultsDisplay.module.css
@@ -193,3 +193,32 @@
 .noResults p {
   margin: 0;
 }
+
+.optimizationInfo {
+  margin-top: 1rem;
+  padding: 0.75rem;
+  background-color: var(--ifm-color-emphasis-100);
+  border-radius: 0.375rem;
+  border: 1px solid var(--ifm-color-emphasis-300);
+}
+
+.infoItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  font-size: 0.875rem;
+}
+
+.infoItem:last-child {
+  margin-bottom: 0;
+}
+
+.infoItem span:first-child {
+  color: var(--ifm-color-emphasis-700);
+  font-weight: 500;
+}
+
+.infoItem span:last-child {
+  color: var(--ifm-font-color-base);
+}
